src/utilities/main/default/objects/Exception_Log__c/fields/Apex_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Apex_Trigger__c</fullName>
    <label>Apex Trigger</label>
    <length>255</length>
    <type>Text</type>
</CustomField>