src/utilities/main/default/objects/Exception_Log__c/fields/Exception_Code__c.field-meta.xml
<CustomField>
    <fullName>Exception_Code__c</fullName>
    <label>Exception Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>