src/utilities/main/default/objects/Exception_Log__c/fields/Handled__c.field-meta.xml
<CustomField>
    <fullName>Handled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Handled?</label>
    <type>Checkbox</type>
</CustomField>